
[tool.poetry]
name = "namex"
version = "1.50.0"
description = ""
authors = ["Thor Wolpert <thor@wolpert.ca>"]
license = "Apache Software License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
queue_common = { git = "https://github.com/bcgov/namex.git", subdirectory = "services/common",  branch = "feature-queue-upgrade" }
swagger_client = { git = "https://github.com/bcgov/namex-synonyms-api-py-client.git" }
simple_cloudevent = { git = "https://github.com/daxiom/simple-cloudevent.py" }
gunicorn = "^20.1.0"
ldclient-py = "^6.9.1"
flask-jwt-oidc = "^0.3.0"
flask = "^1.1.2"
flask-restx = "^0.5.1"
flask-sqlalchemy = "^2.5.1"
flask-marshmallow = "^0.14.0"
flask-caching = "^1.10.1"
flask-migrate = "^2.7.0"
flask-moment = "^0.11.0"
flask-script = "^2.0.6"
jinja2 = "^2.11.3"
markupSafe = "^1.1.1"
itsdangerous = "^1.1.0"
werkzeug = "^1.0.1"
protobuf = "^3.20.1"
SQLAlchemy = "^1.4.11"
marshmallow-sqlalchemy = "0.28.1"
marshmallow = "3.18.0"
pandas = "1.5.0"
inflect = "6.0.0"
Mako = "1.1.4"
alembic = "1.5.8"
aniso8601 = "9.0.1"
asyncio-nats-client = "0.11.4"
asyncio-nats-streaming = "0.4.0"
attrs = "22.1.0"
blinker = "1.5"
cachelib = "0.9.0"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
click = "8.1.3"
cmudict = "1.0.2"
cx-Oracle = "8.3.0"
dataclasses = "0.6"
ecdsa = "0.18.0"
greenlet = "1.1.3"
idna = "3.4"
importlib-resources = "5.10.0"
joblib = "1.2.0"
jsonpickle = "2.2.0"
jsonschema = "4.16.0"
launchdarkly-server-sdk = "8.1.3"
lxml = "4.9.1"
nltk = "3.7"
numpy = "1.23.3"
packaging = "21.3"
pkgutil_resolve_name = "1.3.10"
pronouncing = "0.2.0"
psycopg2-binary = "2.9.4"
pyasn1 = "0.4.8"
pycountry = "22.3.5"
pydantic = "1.10.2"
pyparsing = "3.0.9"
pyrsistent = "0.18.1"
pysolr = "3.9.0"
python-dateutil = "2.8.2"
python-dotenv = "0.21.0"
python-editor = "1.0.4"
python-jose = "3.3.0"
pytz = "2022.4"
regex = "2022.9.13"
requests = "2.28.1"
rsa = "4.9"
sentry-sdk = "1.20.0"
six = "1.16.0"
toolz = "0.12.0"
tqdm = "4.64.1"
typing_extensions = "4.4.0"
urllib3 = "1.26.12"
zipp = "3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
freezegun = "^1.4.0"
pytest-aiohttp = "^1.0.5"
pytest-mock = "^3.12.0"
pyhamcrest = "^2.1.0"
dpath = "^2.1.6"
pydocstyle = "^6.3.0"
flake8 = "^7.0.0"
autopep8 = "^2.0.4"
coverage = "^7.4.1"
pylint = "^3.0.3"
pylint-flask = "^0.6"
isort = "^5.13.2"
pytest-cov = "^4.1.0"
flake8-blind-except = "^0.2.1"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
flake8-quotes = "^3.4.0"
pep8-naming = "^0.13.3"


[tool.flake8]
ignore = ["F401","E402", "Q000", "E203", "W503"]
exclude = [
    ".venv",
    ".git",
    ".history",
    "devops",
    "*migrations*",
]
per-file-ignores = [
    "__init__.py:F401",
    "*.py:B902"
]
max-line-length = 120
docstring-min-length=10
count = true

[tool.black]
target-version =  ["py310", "py311", "py312"]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  migrations
  | devops
)/
'''

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true
skip_glob = ["migrations", "devops"]

[tool.pylint.main]
fail-under = 10
max-line-length = 120
ignore = [ "migrations", "devops", "tests"]
ignore-patterns = ["^\\.#"]
ignored-modules= ["flask_sqlalchemy", "sqlalchemy", "SQLAlchemy" , "alembic", "scoped_session"]
ignored-classes= "scoped_session"
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
extension-pkg-whitelist = "pydantic"
notes = ["FIXME","XXX","TODO"]
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]
confidence = ["HIGH", "CONTROL_FLOW", "INFERENCE", "INFERENCE_FAILURE", "UNDEFINED"]
disable = "C0209,C0301,W0511,W0613,W0703,W1514,R0801,R0902,R0903,R0911,R0401,R1705,R1718,W3101"
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
class-attribute-naming-style = "any"
class-const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
inlinevar-naming-style = "any"
method-naming-style = "snake_case"
module-naming-style = "any"
variable-naming-style = "snake_case"
docstring-min-length = -1
good-names = ["i", "j", "k", "ex", "Run", "_"]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]
defining-attr-methods = ["__init__", "__new__", "setUp", "asyncSetUp", "__post_init__"]
exclude-protected = ["_asdict", "_fields", "_replace", "_source", "_make", "os._exit"]
valid-classmethod-first-arg = ["cls"]
valid-metaclass-classmethod-first-arg = ["mcs"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "2.0"
testpaths = [
   "tests",
]
python_files = [
   "test*.py"
]
norecursedirs = [
   ".git", ".tox", "venv*", "requirements*", "build",
]
log_cli = true
log_cli_level = "1"
filterwarnings = [
   "ignore::UserWarning"
]
markers = [
   "slow",
   "serial",
]

[tool.coverage.run]
branch = true
source = [
   "src/entity-pay",
]
omit = [
    "wsgi.py",
    "gunicorn_config.py"
]

[tool.coverage.report]
exclude_lines = [
   "pragma: no cover",
   "from",
   "import",
   "def __repr__",
   "if self.debug:",
   "if settings.DEBUG",
   "raise AssertionError",
   "raise NotImplementedError",
   "if 0:",
   'if __name__ == "__main__":',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"