[tool.poetry]
name = "solr-admin-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "solr_admin"}]

[tool.poetry.dependencies]
python = "^3.12"
structured_logging = { git = "https://github.com/bcgov/sbc-connect-common.git", subdirectory = "python/structured-logging" }
flask-admin = "^1.6.1"
flask-migrate = "^4.1.0"
flask = "^3.1.1"
mako = "^1.3.9"
markupsafe = "^3.0.2"
sqlalchemy = "^2.0.41"
WTForms = "3.1.2"
alembic = "^1.14.1"
certifi = "^2025.1.31"
chardet = "^5.2.0"
authlib = "^1.6.0"
greenlet = "^3.1.1"
gunicorn = "^23.0.0"
httplib2 = "^0.22.0"
idna = "^3.10"
oauth2client = "^4.1.3"
psycopg2-binary = "^2.9.10"
pyasn1-modules = "^0.4.1"
pyasn1 = "^0.6.1"
pyparsing = "^3.2.1"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
python-editor = "^1.0.4"
requests-futures = "^1.0.2"
requests = "^2.32.3"
rsa = "^4.9"
six = "^1.17.0"
urllib3 = "^2.3.0"
click = "^8.2.1"
itsdangerous = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pyhamcrest = "^2.1.0"
behave = "^1.2.6"
splinter = "^0.21.0"
selenium = "^4.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"