[tool.poetry]
name = "solr-synonyms-api"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "synonyms"}]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
cloud-sql-connector = { git = "https://github.com/bcgov/sbc-connect-common.git", subdirectory = "python/cloud-sql-connector", branch = "main" }
structured_logging = { git = "https://github.com/bcgov/sbc-connect-common.git", rev = "7f1cc0ea4a374310ac558ff435fa6b7ea7bb2f8b", subdirectory = "python/structured-logging" }
flask-migrate = "^2.7.0"
flask-sqlalchemy = "^3.0.0"
flask-script = "^2.0.6"
flask = "^3.0.2"
jinja2 = "^3.1.2"
mako = "^1.1.4"
markupsafe = "^2.1.1"
werkzeug = "^3.0.0"
alembic = "^1.5.8"
aniso8601 = "^9.0.1"
attrs = "^22.2.0"
cachelib = "^0.13.0"
click = "^8.1.3"
dnspython = "^2.7.0"
ecdsa = "^0.18.0"
eventlet = "^0.39.0"
flask-jwt-oidc = "^0.8.0"
flask-marshmallow = "^0.14.0"
greenlet = "^3.0.3"
gunicorn = "^20.1.0"
itsdangerous = "^2.1.2"
joblib = "^1.2.0"
jsonpickle = "^2.2.0"
jsonschema = "^4.16.0"
marshmallow-sqlalchemy = "^0.28.1"
marshmallow = "^3.18.0"
nltk = "^3.7"
pyasn1 = "^0.4.8"
pyinflect = "^0.5.1"
pyrsistent = "^0.18.1"
python-dateutil = "^2.8.2"
python-dotenv = "^0.21.0"
python-editor = "^1.0.4"
python-jose = "^3.3.0"
pytz = "^2022.4"
regex = "^2022.9.13"
rsa = "^4.9"
six = "^1.16.0"
tqdm = "^4.64.1"
flask-restx = "^1.0.3"


[tool.poetry.group.dev.dependencies]
namex = { git = "https://github.com/bcgov/namex.git", subdirectory = "api" }

pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pep8-naming = "^0.13.3"
ruff = "^0.11.6"

[tool.ruff]
line-length    = 120

[tool.ruff.lint]
extend-select = [
  "B",    # bugbears
  "C",    # comprehensions
  "Q",    # quotes style
  "S",    # security (bandit)
  "I",    # import ordering
  "W"     # whitespace
]

extend-ignore = [
  "S113",  # no timeout
  "C901"   # too complex
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "E402", "I"]  # no import ordering on init files
"tests/**/*.py"    = ["B", "C", "S", "F", "E"]  # no strict linting in test files

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "2.0"
testpaths = [
   "tests",
]
pythonpath = [
   "."
]