[tool.poetry]
name = "solr-synonyms-api"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "synonyms"}]


[tool.poetry.dependencies]
namex = { git = "https://github.com/bcgov/namex.git", subdirectory = "api" }
python = ">=3.12,<3.13"
structured_logging = { git = "https://github.com/bcgov/sbc-connect-common.git", rev = "7f1cc0ea4a374310ac558ff435fa6b7ea7bb2f8b", subdirectory = "python/structured-logging" }
flask-sqlalchemy = "^3.0.0"
flask = "^3.0.2"
flask-jwt-oidc = "^0.8.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.28.1"
nltk = "^3.7"
pyinflect = "^0.5.1"
flask-restx = "^1.0.3"
sqlalchemy = "^2.0.0"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pep8-naming = "^0.13.3"
ruff = "^0.11.6"

[tool.ruff]
line-length    = 120

[tool.ruff.lint]
extend-select = [
  "B",    # bugbears
  "C",    # comprehensions
  "Q",    # quotes style
  "S",    # security (bandit)
  "I",    # import ordering
  "W"     # whitespace
]

extend-ignore = [
  "S113",  # no timeout
  "C901"   # too complex
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "E402", "I"]  # no import ordering on init files
"tests/**/*.py"    = ["B", "C", "S", "F", "E"]  # no strict linting in test files

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "2.0"
testpaths = [
   "tests",
]
pythonpath = [
   "."
]