[tool.poetry]
name = "bad-designation-notifier"
version = "0.2.0"
description = "An app to detect and notify about bad designations."
authors = ["Eve Deng <eve.deng@gov.bc.ca>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "bad-designation-notifier", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
namex = { git = "https://github.com/bcgov/namex.git", subdirectory = "api", branch = "main" }
