[tool.poetry]
name = "bad-name-notifier"
version = "0.2.0"
description = "An app to detect and notify about bad names."
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "services", from = "src" },
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
namex = { git = "https://github.com/bcgov/namex.git", subdirectory = "api", branch = "main" }