[tool.poetry]
name = "inprogress-update"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "inprogress_update", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
namex = { git = "https://github.com/bcgov/namex.git", subdirectory = "api", branch = "main" }
openapi_client = { git = "https://github.com/bcgov/namex-payment-api-py-client.git", branch = "dev" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pep8-naming = "^0.14.1"
coverage = "^7.6.12"
autopep8 = "^2.3.2"
ruff = "^0.11.6"

[tool.ruff]
line-length    = 120
extend-exclude = ["migrations"]

[tool.ruff.lint]
extend-select = [
  "B",    # bugbears
  "C",    # comprehensions
  "Q",    # quotes style
  "S",    # security (bandit)
  "I",    # import ordering
  "W"     # whitespace
  ]

extend-ignore = [
  "S113",  # no timeout
  "S310",  # unsafe URL open
  "B904",  # missing 'from err' in raise
  "C901",  # too complex
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes    = "single"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "E402", "I"]  # no import ordering on init files
"tests/**/*.py"    = ["B", "C", "S", "F", "E"]  # no strict linting in test files

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"