[tool.poetry]
name = "nr-duplicates-report"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "nr_duplicates_report"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
structured_logging = { git = "https://github.com/bcgov/sbc-connect-common.git", subdirectory = "python/structured-logging" }
attrs = "^25.1.0"
certifi = "^2025.1.31"
click = "^8.1.8"
df2gspread = "^1.0.4"
flask = "^3.1.0"
future = "^1.0.0"
gspread = "^6.2.0"
idna = "^3.10"
importlib-metadata = "^8.6.1"
ipython-sql = "^0.5.0"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.6"
jsonschema = "^4.23.0"
jupyter = "^1.1.1"
jupyterlab-server = "^2.27.3"
markupsafe = "^3.0.2"
marshmallow = "^3.26.1"
matplotlib = "^3.10.1"
more-itertools = "^10.6.0"
oauth2client = "^4.1.3"
pandas = "^2.2.3"
papermill = "^2.6.0"
psycopg2-binary = "^2.9.10"
pyrsistent = "^0.20.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
pytz = "^2025.1"
requests = "^2.32.3"
schedule = "^1.2.2"
simplejson = "^3.20.1"
six = "^1.17.0"
sqlalchemy = "^2.0.38"
spacy = "^3.8.4"
urllib3 = "^2.3.0"
werkzeug = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.1.2"
flake8-blind-except = "^0.2.1"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.2"
flake8-quotes = "^3.4.0"
pep8-naming = "^0.14.1"
pylint = "^3.3.4"
pylint-flask = "^0.6"
pep8 = "^1.7.1"
autopep8 = "^2.3.2"
coverage = "^7.6.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
