[tool.poetry]
name = "sftp-nuans-report"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sftp_nuans_report"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
structured_logging = { git = "https://github.com/bcgov/sbc-connect-common.git", subdirectory = "python/structured-logging" }
registry_schemas = { git = "https://github.com/bcgov/business-schemas.git", rev = "2.5.0" }
cloud-sql-connector = { git = "https://github.com/bcgov/sbc-connect-common.git", subdirectory = "python/cloud-sql-connector", branch = "main" }
jupyter = "^1.1.1"
simplejson = "^3.20.1"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
spacy = "^3.8.4"
papermill = "^2.6.0"
schedule = "^1.2.2"
attrs = "^25.1.0"
future = "^1.0.0"
jinja2 = "^3.1.5"
markupsafe = "^3.0.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.1"
importlib-metadata = "^8.6.1"
itsdangerous = "^2.2.0"
jsonschema = "^4.23.0"
more-itertools = "^10.6.0"
six = "^1.17.0"
pyrsistent = "^0.20.0"
zipp = "^3.21.0"
flask = "^3.1.0"
pytest = "^8.3.5"
click = "^8.1.8"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
marshmallow = "^3.26.1"
werkzeug = "^3.1.3"
certifi = "^2025.1.31"
urllib3 = "^2.3.0"
idna = "^3.10"
chardet = "^5.2.0"
pydantic = "^2.10.6"
pylint = "^3.3.4"
pylint-flask = "^0.6"
pep8 = "^1.7.1"
autopep8 = "^2.3.2"
cachetools = "^5.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.1.2"
flake8-blind-except = "^0.2.1"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.2"
flake8-quotes = "^3.4.0"
pep8-naming = "^0.14.1"
psycopg2-binary = "^2.9.11"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.coverage.run]
branch = true
source = [
   "sftp_nuans_report",
]
omit = [
    "*/.venv/*",
   "*/__init__.py",
   "*/sftpnuans.py",
   "*/services/*",
   "*/util/*",
]