[tool.poetry]
name = "namex-pay"
version = "0.1.0"
description = ""
authors = ["Thor Wolpert <thor@wolpert.ca>"]
license = "Apache Software License Version 2.0"
readme = "README.md"
packages = [{include = "namex_pay", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
namex = { git = "https://github.com/bcgov/namex.git", subdirectory = "api", branch = "main" }
registry_schemas = { git = "https://github.com/bcgov/business-schemas.git"}
queue_common = { git = "https://github.com/bcgov/namex.git", subdirectory="services/common" }
swagger_client = { git = "https://github.com/bcgov/namex-synonyms-api-py-client.git" }
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"